k8s/metabase/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: twenty-prod
  labels:
    app.kubernetes.io/part-of: twenty
    environment: production
